--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Learn web development,mobile develeopment and much more.</h3>
+      <h3>Learn web development,mobile development and much more.</h3>
       <p>are you ready lets begin the journey.</p>
       <a class="btn" href="mailto:mahtoavinash389@email.com">CONTACT ME</a>
     </div>
