--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
   <div class="topcontainer">
     <img class="rudra"
-      src="https://scontent.fixr3-1.fna.fbcdn.net/v/t39.30808-6/278191276_2023209941174492_72177482333961237_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=NQKRsKSgp1wAX9-d_-_&_nc_ht=scontent.fixr3-1.fna&oh=00_AfD47yMr4rYIm9_iNpXjI5IPuJ3zqNYtJ5flFPVfiIshHA&oe=63773BD7"
-      alt="Rudra profile pic">
+      src="images/avi.png" alt="Rudra profile pic">
 
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1> Hello I am Rudra</h1>
